# gmail-ftp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  main.go
.claude-plugin/: marketplace.json
.claude/skills/: qfs-code
.github/workflows/: ci.yml  release.yml
.workaholic/: index.md
.workaholic/RFDs/: 0001-cfs-architecture.md  0001-qfs-architecture.md
.workaholic/concerns/: 11-cf-live-203090-unimplemented-cf-and.md  11-cloud-reads-panicked-under-runtime-within.md  11-composable-read-pipeline-192440-terminal-side.md  11-extend-on-the-read-path-is.md  11-git-ref-tree-blob-reads-and.md  11-local-write-materialization-is-narrow.md  11-markdown-codec-token-and-objstore-consent.md  11-postgres-mysql-declarations-for-the-declared.md  11-project-db-migration-mismatch-store-flakiness.md  index.md
.workaholic/release-notes/: index.md
.workaholic/stories/: README.md  index.md  work-20260629-110121.md  work-20260703-022500.md
.workaholic/tickets/: README.md
.workaholic/trips/cfs-foundation-e0/: event-log.md  plan.md
.workaholic/trips/gmail-ftp/: event-log.md  plan.md
crates/cfs/: Cargo.toml
crates/cfs/src/: catalog.rs  cron.rs  describe.rs  host.rs  main.rs  serve.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: lib.rs
crates/cmd/tests/: dep_direction.rs  e2e_binding_ddl.rs  e2e_cli.rs  e2e_serve.rs
crates/codec/: Cargo.toml
crates/codec/src/: convert.rs  lib.rs  nested.rs
crates/codec/src/codecs/: csv.rs  markdown.rs  mod.rs  toml.rs
crates/codec/tests/: codecs.rs
crates/core/: Cargo.toml
crates/core/src/: eval.rs  lib.rs  plan.rs  registry.rs
crates/core/src/ddl/: server.rs
crates/core/src/ddl/server/: spec.rs  tests.rs
crates/core/src/eval/: tests.rs
crates/core/src/stdlib/: aggregate.rs  context.rs  mod.rs  registry.rs  scalar.rs  tablevalued.rs  tests.rs
crates/cron/src/: schedule.rs  scheduler.rs  tests.rs
crates/driver/: Cargo.toml
crates/driver-ga/: Cargo.toml
crates/driver-ga/src/: applier.rs  catalog.rs  client.rs  compile.rs  error.rs  lib.rs  path.rs  report.rs  tests.rs
crates/driver-gdrive/src/: client.rs
crates/driver-git/: Cargo.toml
crates/driver-git/src/: applier.rs  blobfs.rs  dto.rs  error.rs  inflate.rs  lib.rs  planner.rs  procedures.rs  sha1.rs  tests.rs
crates/driver-git/tests/: commit_input_public_api.rs  e2e_planner.rs  inflate_differential.rs
crates/driver-github/: Cargo.toml
crates/driver-github/src/: applier.rs  client.rs  dto.rs  effect.rs  error.rs  lib.rs  path.rs  procs.rs  pushdown.rs  read.rs  schema.rs  tests.rs
crates/driver-github/tests/: e2e_blackbox.rs
crates/driver-gmail/: Cargo.toml
crates/driver-gmail/src/: applier.rs  client.rs  effect.rs  error.rs  lib.rs  mime.rs  path.rs  query.rs  schema.rs  tests.rs
crates/driver-http/: Cargo.toml
crates/driver-http/src/: applier.rs  client.rs  config.rs  effect.rs  error.rs  lib.rs  request.rs  tests.rs
crates/driver-http/tests/: wire.rs
crates/driver-local/src/: error.rs  fs_core.rs  read.rs  tests.rs
crates/driver-objstore/tests/: planner_e2e.rs
crates/driver-slack/tests/: planner_e2e.rs
crates/driver-sql/: Cargo.toml
crates/driver-sql/src/: applier.rs  conn.rs  error.rs  lib.rs  path.rs  tests.rs
crates/driver/src/: error.rs  lib.rs  path.rs
crates/engine/: Cargo.toml
crates/engine/src/: combine.rs  eval.rs  lib.rs  scan.rs
crates/engine/tests/: engine.rs
crates/exec/: Cargo.toml
crates/exec/src/: addressing.rs  dto.rs  error.rs  exec.rs  lib.rs  output.rs  read.rs
crates/exec/src/shell/: desugar.rs
crates/exec/tests/: oneshot.rs  shell_e2e.rs
crates/host/: Cargo.toml
crates/host/fixtures/: deploy_boot.cfs  wrangler.golden.toml
crates/host/src/: daemon.rs  derive.rs  dto.rs  from_server.rs  host.rs  lib.rs  mock.rs  workers.rs  wrangler.rs
crates/host/tests/: deployment.rs  no_vendor_in_core.rs
crates/http-core/src/: lib.rs
crates/http/src/: rewrite.rs  route.rs  tests.rs
crates/http/tests/: e2e_endpoints.rs
crates/lang/src/: keywords.rs  lex.rs  lib.rs  span.rs  token.rs
crates/lang/tests/: lex.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  error.rs  grammar.rs  lib.rs  tests.rs
crates/parser/tests/: golden_ast.rs
crates/plan/src/: apply.rs
crates/pushdown/: Cargo.toml
crates/pushdown/src/: lib.rs  logical.rs  lower.rs  physical.rs  planner.rs
crates/pushdown/tests/: lowering.rs  planner.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bridge.rs  driver.rs  error.rs  interpreter.rs  lib.rs  txn.rs
crates/runtime/tests/: interpreter.rs  txn_commit.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: active.rs  backends.rs  key.rs  lib.rs  local.rs  resolve.rs  secret.rs  store.rs  worker.rs
crates/server/src/: driver.rs  lib.rs  lower.rs
crates/skill/assets/: SKILL.md
crates/skill/src/: lib.rs
crates/test/tests/: planner_e2e_consumer.rs  wasm_gating.rs
crates/txn/: Cargo.toml
crates/txn/src/: key.rs  ledger.rs  leg.rs  lib.rs  outcome.rs  report.rs  saga.rs  strategy.rs  tests.rs  version.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs  predicate.rs  (+2 more)
crates/watchtower/: Cargo.toml
deploy/: cfs.service  release.sh
deploy/dev/: README.md  compose.yml
docs/: README.md  drivers.md  index.md  language.md  query-cookbook.md  roadmap.md  server.md
docs/.vitepress/: config.mts
docs/adr/: 0001-parser-library.md  0002-local-combine-engine.md  0003-git-object-access.md  0004-http-serving.md  0005-deployment-hosts.md  0008-multi-host-account-model.md
docs/cookbook/: automation.md  code.md  cross-service.md  databases.md  files.md  gdrive.md  git.md  github.md  gmail.md  index.md  mail.md  slack.md
docs/guide/: account-model.md  cli.md  concepts.md  connect.md  connections.md  getting-started.md  installation.md  operator.md  passphrase.md  replace-gmail-gdrive-ftp.md  shell.md
docs/security/: threat-model.md
internal/audit/: audit.go
internal/auth/: auth.go
internal/gmail/: client.go  model.go
internal/shell/: commands.go  output.go  shell.go  shell_test.go
spikes/parser-spike/: Cargo.toml
(+217 files in other folders)
