[package]
name = "cfs-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs shared engine glue (RFD-0001 §3/§6): the three open registries, the Engine/Session context, and re-exports of the trait seams + structured CfsError."

[dependencies]
cfs-driver = { path = "../driver" }
cfs-codec = { path = "../codec" }
cfs-lang = { path = "../lang" }
cfs-plan = { path = "../plan" }
# The canonical type & schema model (t05). A leaf crate; core re-exports it so the
# rest of the workspace sees one `cfs_core::Schema` / `Value` / `TypeError`.
cfs-types = { path = "../types" }
# Acceptance criterion C5 / E1 (ticket t06): the `cfs-core -> cfs-parser` edge is now
# WIRED — name resolution (`resolve`) consumes the parsed `cfs_parser::Statement` AST.
# One direction only: `cfs-parser` must never depend on `cfs-core` (cycle prevention,
# asserted by `cfs-cmd/tests/dep_direction.rs`).
cfs-parser = { path = "../parser" }
# The pushdown planner (t14): core wires the query AST → LogicalPlan → PhysicalPlan,
# building the SourceRegistry from the MountRegistry so independent native ScanNodes
# surface for T10's batcher. Acyclic: cfs-core → cfs-pushdown → cfs-driver.
cfs-pushdown = { path = "../pushdown" }
# The credential / secret store + multi-account resolution (t27, RFD §10). core threads
# a `Secrets` handle into the Engine so the driver-bind context fetches credentials via
# the one trait, and re-exports the secrets surface so consumers depend on cfs-core only.
# Acyclic: cfs-core → cfs-secrets → cfs-types (a leaf).
cfs-secrets = { path = "../secrets" }
# The server-binding DDL (t31) stores the deferred body (`AS <query>` / `DO <plan>`) as a
# fully-parsed, serializable `StatementSpec`/`PlanSpec`: serde derives over the owned AST,
# serialized to a canonical span-normalised form. serde is pure-Rust / wasm-clean and adds
# no driver/vendor type (the AST is already vendor-free).
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
