[package]
name = "cfs-exec"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs execution layer (t29): the end-to-end SELECT read-path executor (parse -> resolve -> plan -> driver scan -> engine residual -> rows) and the COMMIT apply seam, composing cfs-core + cfs-pushdown + cfs-engine above the spine. Owns the async ReadDriver scan seam (the read counterpart of the runtime's write ApplyDriver). Logic sits ABOVE the spine; nothing in the pure spine depends back onto it."

[dependencies]
# The hub: parse + resolve + registry + plan_query (AST -> PhysicalPlan) + CfsError, all
# re-exported owned types. cfs-exec reaches the parser/plan/driver/codec ONLY through this
# hub re-export surface, never directly.
cfs-core = { path = "../core" }
# The closed-core grammar front door (parse_statement -> owned Statement AST). The CLI adds
# zero keywords; this crate parses the one-shot statement and hands the AST to the hub.
cfs-parser = { path = "../parser" }
# The pushdown split (PhysicalPlan / ScanNode / PushedQuery) and the local combine engine
# (MiniEvaluator) that re-filters the residual over over-returned scan rows (the t20 property).
cfs-pushdown = { path = "../pushdown" }
cfs-engine = { path = "../engine" }
# Async scan seam. tokio is used here for the read executor's I/O domain. This does NOT
# violate the runtime confinement guard (crates/cmd/tests/dep_direction.rs), which fires
# only on cfs-runtime *consumers*: cfs-exec does NOT depend on cfs-runtime. Nor does it
# pollute cfs-plan's purity dep-closure (cfs-plan never depends on cfs-exec). The pure spine
# (plan/types/pushdown/engine/core) stays runtime-free; cfs-exec is the integration layer
# ABOVE it, the read-path sibling of the runtime's write/commit stage.
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# All test deps (cfs-pushdown, async-trait, serde_json) are already normal dependencies of
# this crate, so the integration tests reach them without a separate dev-dep entry.

[lints]
workspace = true
