[package]
name = "cfs-pushdown"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cfs pushdown planner (RFD-0001 §6, ticket t14): the pure source-splitting pass that lowers a query into a LogicalPlan, negotiates each maximal same-source subtree against a driver's PushdownProfile, and emits a PhysicalPlan of native Scans + a local Combine residual. Cross-source JOIN/UNION federate locally. Domain crate: no I/O, no async, no vendor types."

[dependencies]
# The pushdown profile + capability accessors the planner queries by intent (t13). This
# edge is acyclic: cfs-pushdown -> cfs-driver -> cfs-plan -> cfs-types.
cfs-driver = { path = "../driver" }
# The canonical typed Schema + the typed Predicate IR that LogicalPlan::Filter carries
# (O-t07-3: predicates are sourced from the typed predicate model, NOT a dropped AST).
cfs-types = { path = "../types" }
# Owned identity/path DTOs (DriverId/VfsPath) shared with the effect plan, so a ScanNode
# names its source the same way an EffectNode's Target does.
cfs-plan = { path = "../plan" }
# The pure AST. t14 sources predicates/expressions FROM the AST (O-t07-3) — the lowering
# `Expr -> cfs_types::Predicate` and `Pipeline -> LogicalPlan` lives here. This edge is
# acyclic (cfs-parser -> cfs-lang only) and carries no vendor/winnow type (G6).
cfs-parser = { path = "../parser" }
# Structured, AI-consumable error / `explain()` JSON. No I/O, no async, no vendor SDK.
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cfs-types = { path = "../types" }
serde_json = { workspace = true }

[lints]
workspace = true
